commit 11:50 8/10 solved screenshot directory issue and cross broswer

--- a/Configuration/config.ini
+++ b/Configuration/config.ini
@@ -2,4 +2,8 @@
 baseurl = https://admin-demo.nopcommerce.com/
 username =admin@yourstore.com
 password =admin
-direcrotypath = ../TestScreenshots
+loginpath =C:\Users\achal\PycharmProjects\pythonproject\TestScreenshots\test1
+dashboadpath =C:\Users\achal\PycharmProjects\pythonproject\TestScreenshots\test2
+
+#C:\Users\achal\PycharmProjects\pythonproject\TestScreenshots\
+#../TestScreenshots
