commit 2.30 PM 14/10/22 Data Driven Testing

--- a/Configuration/config.ini
+++ b/Configuration/config.ini
@@ -5,5 +5,8 @@ password =admin
 loginpath =C:\Users\Achal Trivedi\PycharmProjects\pythonproject\TestScreenshots\test1
 dashboadpath =C:\Users\Achal Trivedi\PycharmProjects\pythonproject\TestScreenshots\test2
 
-#C:\Users\achal\PycharmProjects\pythonproject\TestScreenshots\
-#../TestScreenshots
+
+
+#C:\Users\Achal Trivedi\PycharmProjects\pythonproject\TestScreenshots\test1  - working
+#../TestScreenshots         - create only one screenshot folder
+#..\\Configuration\\config.ini   - Not working well -create only one screenshot folder
